<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/cat_appearance">
        <ListPreference
            android:defaultValue="system"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:key="pref_theme"
            android:title="@string/pref_theme_title"
            app:useSimpleSummaryProvider="true" />

        <SeekBarPreference
            android:defaultValue="100"
            android:key="pref_text_zoom"
            android:max="200"
            android:title="@string/pref_zoom_title"
            app:min="50"
            app:seekBarIncrement="10"
            app:showSeekBarValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/cat_files">
        <Preference
            android:key="pref_folder"
            android:title="@string/pref_folder_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/cat_reading">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_confirm_close"
            android:title="@string/pref_confirm_close_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_keep_screen_on"
            android:title="@string/pref_keep_screen_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/cat_maintain">
        <Preference
            android:key="pref_clear"
            android:title="@string/pref_clear_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/cat_about">
        <Preference
            android:key="pref_about"
            android:summary="@string/pref_about_summary"
            android:title="@string/pref_about_title" />
    </PreferenceCategory>
</PreferenceScreen>
